--- a/popup.html
+++ b/popup.html
@@ -13,10 +13,22 @@
 	</head>
 	
 	<body>
-		<label for="index-loc">Index file location</label>
-		<input type="text" class="input" id="index-loc" name="index-loc"><button class="btn btn-primary" id="save-index">Save</button>
-		<p id="saved-text">Saved!</p>
-		<p id="not-saved-text">Not saved!</p>
+		<div class="form-horizontal">
+			<div class="form-group">
+				<label for="index-loc">Index file location</label>
+				<input type="text" class="form-control" id="index-loc" name="index-loc">
+			</div>
+			<div class="form-group">
+				<label>
+					<input type="checkbox" id="extension-active" name="extension-active"> Extension Active?
+				</label>
+			</div>
+			<div class="form-group">
+				<button class="btn btn-primary" id="save-index">Save</button>
+				<p class="feedback" id="saved-text">Saved!</p>
+				<p class="feedback" id="not-saved-text">Not saved!</p>
+			</div>
+		</div>
 		<script src="js/popup.js" type="text/javascript"></script>
 	</body>
 </html>
