Change for new bot version.

--- a/popup.html
+++ b/popup.html
@@ -15,7 +15,7 @@
 	<body>
 		<div class="form-horizontal">
 			<div class="form-group">
-				<label for="index-loc">Index file location</label>
+				<label for="index-loc">Script file location</label>
 				<input type="text" class="form-control" id="index-loc" name="index-loc">
 			</div>
 			<div class="form-group">
